middle of migration